# esp-dev-kits

./: .gitmodules
esp32-s2-kaluga-1/examples/lvgl_demo/: CMakeLists.txt  Makefile  README.md
esp32-s2-kaluga-1/examples/lvgl_demo/main/: CMakeLists.txt  Kconfig.projbuild  connect.c  http_req.c  lvgl_main.c
esp32-s2-kaluga-1/examples/lvgl_demo/main/include/: http_req.h
